Update command data for Kia/Stinger

--- a/tests/test_cases/2021/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2021/commands/7B3.7BB.220100|fc=1.yaml
@@ -89,6 +89,17 @@ test_cases:
     7BB242D59BAFFFF1876
     7BB25FF00FFAAAAAAAA
 - expected_values:
+    KIA_TEMP_EXT: 11.5
+    KIA_TEMP_INT: 12.5
+    KIA_VSS: 0
+  response: |-
+    7BB10256201007F901E
+    7BB2168FF69675202EF
+    7BB22F003EFFFFF10FF
+    7BB23FFFFFFFFFFE80F
+    7BB242D392CFFFF0063
+    7BB25FF01FFAAAAAAAA
+- expected_values:
     KIA_TEMP_EXT: 9.5
     KIA_TEMP_INT: 16
     KIA_VSS: 93
