--- a/tests/test_cases/2021/commands/7E0.0131.yaml
+++ b/tests/test_cases/2021/commands/7E0.0131.yaml
@@ -7,5 +7,8 @@ test_cases:
     CLR_DIST: 8177
   response: 7E80441311FF1
 - expected_values:
+    CLR_DIST: 8192
+  response: '7E80441312000'
+- expected_values:
     CLR_DIST: 20695
   response: 7E804413150D7
