Update command data for Kia/Stinger

--- a/tests/test_cases/2021/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2021/commands/7B3.7BB.220100|fc=1.yaml
@@ -111,6 +111,17 @@ test_cases:
     7BB242D45D2FFFF5D9F
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_TEMP_EXT: 12.5
+    KIA_TEMP_INT: 19
+    KIA_VSS: 106
+  response: |-
+    7BB10256201007F901E
+    7BB2168FF7669580378
+    7BB22970378FFFF10FF
+    7BB23FFFFFFFFFF4E0F
+    7BB242D39D4FFFF6AC6
+    7BB25FF01FFAAAAAAAA
+- expected_values:
     KIA_TEMP_EXT: 7
     KIA_TEMP_INT: 22
     KIA_VSS: 59
