--- a/tests/test_cases/2021/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2021/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -413,6 +413,78 @@ test_cases:
     KIA_TPMS_PRESS_RR: 0.8
     KIA_TPMS_TEMP_FL: 67
     KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_RL: 61
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 33
+    KIA_TP_FR: 13.4
+    KIA_TP_FR_PRE21: 36.8
+    KIA_TP_RL: 0.8
+    KIA_TP_RL_PRE21: 41.6
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 40.6
+    KIA_TT_FL: 17
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: 17
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 16
+    KIA_TT_RR: 11
+    KIA_TT_RR_PRE21: 16
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180A5430400B843
+    7A8220400CB420400D0
+    7A8234206003D9BB19B
+    7A824B19AB19AB1AAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 1.2
+    KIA_TPMS_TEMP_FL: 68
+    KIA_TPMS_TEMP_FR: 6
+    KIA_TPMS_TEMP_RL: 61
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 33
+    KIA_TP_FR: 13.4
+    KIA_TP_FR_PRE21: 36.8
+    KIA_TP_RL: 1.2
+    KIA_TP_RL_PRE21: 41.6
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 41
+    KIA_TT_FL: 18
+    KIA_TT_FR: -44
+    KIA_TT_FR_PRE21: 17
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 16
+    KIA_TT_RR: 11
+    KIA_TT_RR_PRE21: 16
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180A5440600B843
+    7A8220600CD420600D0
+    7A8234206003D9BB29B
+    7A824B19AB19AB1AAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0.8
+    KIA_TPMS_TEMP_FL: 67
+    KIA_TPMS_TEMP_FR: 4
     KIA_TPMS_TEMP_RL: 57
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 33.2
