Update command data for Kia/Stinger

--- a/tests/test_cases/2021/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22E021.yaml
@@ -421,24 +421,24 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
-    KIA_TURBO_BOOST: 0.94199
-    KIA_WG_DUTY: 69.28817
-    KIA_WG_POSITION: 0.60426
+    KIA_TURBO_BOOST: 0.93598
+    KIA_WG_DUTY: 71.19249
+    KIA_WG_POSITION: 388.81209
     KIA_WG_SETPOINT: 84.99886
-    KIA_WG_VOLTAGE: 1.15724
+    KIA_WG_VOLTAGE: 1.19631
   response: |-
     7E8105B62E021FE9FCE
-    7E821FF0000402A0A30
-    7E82209307A29F40861
-    7E8230E1A16D115310E
-    7E82477000000A01000
+    7E821FF0000402A0530
+    7E82209306925120957
+    7E82306250B7E0B8A06
+    7E82408000000A01000
     7E82500000079000000
-    7E826AD4E861C000000
-    7E827000000601DA058
-    7E828B0006336663600
+    7E826A94D7518000000
+    7E827000000781EA05B
+    7E82820F8D636663600
     7E829220027401C0019
-    7E82AC01EFF00000080
-    7E82B5AF9F7F2366636
+    7E82A801FFF000000A0
+    7E82B5C40FCA4366636
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
@@ -610,24 +610,24 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
-    KIA_TURBO_BOOST: 0.69065
-    KIA_WG_DUTY: 71.14061
-    KIA_WG_POSITION: 397.71725
+    KIA_TURBO_BOOST: 0.87344
+    KIA_WG_DUTY: 71.72656
+    KIA_WG_POSITION: 3.57061
     KIA_WG_SETPOINT: 84.99886
-    KIA_WG_VOLTAGE: 1.22316
+    KIA_WG_VOLTAGE: 1.17189
   response: |-
     7E8105B62E021FE9FCE
-    7E821FF00008029392F
-    7E822382F9325390C88
-    7E823072108440B700A
-    7E82402000000A01000
+    7E821FF00008029D12E
+    7E822D02E6925400EA4
+    7E82306A906DC0AD40A
+    7E82400000000A01000
     7E82500000079000000
-    7E826B44D9F18000000
-    7E827000000981F505B
-    7E8280FFE8936663600
+    7E826A94D7518000000
+    7E827000000781E005B
+    7E828CF024936663600
     7E829220027401C0019
-    7E82A4020FF00000020
-    7E82B5DFCFB9E366636
+    7E82A801FFF000000A0
+    7E82B5C62F9BA366636
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
@@ -901,6 +901,27 @@ test_cases:
     7E829220027401C0019
     7E82A601EFF00000080
     7E82B599D0349366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 2.08923
+    KIA_WG_DUTY: 59.3637
+    KIA_WG_POSITION: 377.04433
+    KIA_WG_SETPOINT: 63.07469
+    KIA_WG_VOLTAGE: 1.20119
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000E02DC434
+    7E822C3346731DB080C
+    7E8231D782772258E1B
+    7E824DD01E800A01000
+    7E82500000079000000
+    7E82616507524000000
+    7E827000000781EC04B
+    7E828FCF14E285E2700
+    7E829220027401C0019
+    7E82A801FFF000000A0
+    7E82B4CE4F402285E27
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
