--- a/tests/test_cases/2020/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2020/commands/7B3.7BB.220100|fc=1.yaml
@@ -1,15 +1,26 @@
 command_id: 7B3.7BB.220100|fc=1
 test_cases:
 - expected_values:
-    KIA_TEMP_EXT: 1
+    KIA_TEMP_EXT: 0.5
+    KIA_TEMP_INT: 1
+    KIA_VSS: 0
+  response: |-
+    7BB10256201007F901E
+    7BB2168FF52515001EF
+    7BB22C401EFFFFF0FFF
+    7BB23FFFFFFFFFFFFC2
+    7BB249451B6FFFF006B
+    7BB25FF00FF00000000
+- expected_values:
+    KIA_TEMP_EXT: 0.5
     KIA_TEMP_INT: 1.5
     KIA_VSS: 0
   response: |-
     7BB10256201007F901E
-    7BB2168FF53525500EF
-    7BB22EE00EFFFFF10FF
+    7BB2168FF53515003EF
+    7BB22EF03EFFFFF10FF
     7BB23FFFFFFFFFFFF10
-    7BB2494482DFFFF0053
+    7BB2494542EFFFF0071
     7BB25FF00FF00000000
 - expected_values:
     KIA_TEMP_EXT: 10
