--- a/tests/test_cases/2020/commands/7E0.0144.yaml
+++ b/tests/test_cases/2020/commands/7E0.0144.yaml
@@ -1,5 +1,23 @@
 command_id: 7E0.0144
 test_cases:
 - expected_values:
+    EQ_RAT: 0.89357
+  response: '7E80441447260'
+- expected_values:
+    EQ_RAT: 0.98927
+  response: 7E80441447EA0
+- expected_values:
+    EQ_RAT: 0.99025
+  response: 7E80441447EC0
+- expected_values:
+    EQ_RAT: 0.99123
+  response: 7E80441447EE0
+- expected_values:
+    EQ_RAT: 0.9922
+  response: 7E80441447F00
+- expected_values:
     EQ_RAT: 0.99416
   response: 7E80441447F40
+- expected_values:
+    EQ_RAT: 1.03029
+  response: 7E804414483E0
