--- a/tests/test_cases/2020/commands/7E0.0108.yaml
+++ b/tests/test_cases/2020/commands/7E0.0108.yaml
@@ -4,6 +4,9 @@ test_cases:
     SHRTFT2: -29.5625
   response: 7E80341087E
 - expected_values:
+    SHRTFT2: -28.78125
+  response: 7E80341087F
+- expected_values:
     SHRTFT2: -28
   response: '7E803410880'
 - expected_values:
