--- a/tests/test_cases/2021/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2021/commands/7B3.7BB.220100|fc=1.yaml
@@ -111,6 +111,17 @@ test_cases:
     7BB242D392CFFFF0063
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_TEMP_EXT: 6
+    KIA_TEMP_INT: 14
+    KIA_VSS: 7
+  response: |-
+    7BB10256201007F901E
+    7BB2168FF6C5C5507EF
+    7BB229708EFFFFF0EFF
+    7BB23FFFFFFFFFFE9DB
+    7BB24EE3DD2FFFF0780
+    7BB25FF01FFAAAAAAAA
+- expected_values:
     KIA_TEMP_EXT: 5.5
     KIA_TEMP_INT: 16
     KIA_VSS: 37
