--- a/tests/test_cases/2021/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22E021.yaml
@@ -484,6 +484,27 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TURBO_BOOST: 0.65818
+    KIA_WG_DUTY: 68.93111
+    KIA_WG_POSITION: 0.80568
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.15236
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF000060291E2F
+    7E8221D2F6A25AB0948
+    7E823063F07FF07EE06
+    7E82401000000A01000
+    7E82500000079000000
+    7E826A94D7618000000
+    7E827000000401D8058
+    7E8283B008436663600
+    7E829220027401C0019
+    7E82A601EFF00000060
+    7E82B5940052E366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
     KIA_TURBO_BOOST: 0.96604
     KIA_WG_DUTY: 68.09491
     KIA_WG_POSITION: 394.89128
@@ -880,6 +901,27 @@ test_cases:
     7E829220027401C0019
     7E82A601EFF00000060
     7E82B597A0349366636
+    7E82CA025E029E01DC0
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
+    KIA_TURBO_BOOST: 0.97085
+    KIA_WG_DUTY: 69.44991
+    KIA_WG_POSITION: 396.31952
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_VOLTAGE: 1.16213
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000E02A2231
+    7E82222318A291F0905
+    7E8230E1D170E17FC0D
+    7E82486000000A01000
+    7E82500000079000000
+    7E826B14E961C000000
+    7E827000000401DC058
+    7E828E5FDA436663600
+    7E829220027401C0019
+    7E82A601EFF00000040
+    7E82B5AB6F40F376636
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
