--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -63,11 +63,15 @@ supported_commands_by_ecu:
   - 0157:STSO2FT2
   - 0158:LGSO2FT2
   - 0159:FRP_ABS
+  - 7E0.0104:LOAD_PCT
+  - 7E0.0105:ECT
   - 7E0.010D:VSS
   - 7E0.011C:OBDSUP
   - 7E0.012F:FLI
   - 7E0.0131:CLR_DIST
+  - 7E0.0134:LAMBDA11_CURRENT,O2S11_CURRENT
   - 7E0.0142:VPWR
+  - 7E0.0144:EQ_RAT
   - 7E0.7E8.22E001:KIA_EIT,KIA_EOT,KIA_IAT
   - 7E0.7E8.22E002:KIA_INJ_DUR_1,KIA_INJ_DUR_2,KIA_INJ_DUR_3,KIA_INJ_DUR_4
   - 7E0.7E8.22E004:KIA_22E004,KIA_AUX_SOC,KIA_AUX_SOH
