--- a/tests/test_cases/2021/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2021/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -590,6 +590,42 @@ test_cases:
     KIA_RR_INVALID: 0
     KIA_TB_FR: 3V+
     KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0.8
+    KIA_TPMS_TEMP_FL: 57
+    KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_RL: 54
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 35.6
+    KIA_TP_FR: 11.2
+    KIA_TP_FR_PRE21: 35.6
+    KIA_TP_RL: 0.8
+    KIA_TP_RL_PRE21: 38.6
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 38.4
+    KIA_TT_FL: 7
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: 6
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 6
+    KIA_TT_RR: 4
+    KIA_TT_RR_PRE21: 6
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180B2390400B238
+    7A8220400C0380400C1
+    7A8233804003696AE96
+    7A824AE96AE96AEAAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
     KIA_TPMS_PRESS_RR: 1.2
     KIA_TPMS_TEMP_FL: 96
     KIA_TPMS_TEMP_FR: 6
