--- a/tests/test_cases/2021/commands/7E0.7E8.22E002.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22E002.yaml
@@ -97,6 +97,18 @@ test_cases:
     7E8246B01720158016F
     7E825015C0100000000
 - expected_values:
+    KIA_INJ_DUR_1: 0.17941
+    KIA_INJ_DUR_2: 0.17695
+    KIA_INJ_DUR_3: 0.18186
+    KIA_INJ_DUR_4: 0.16876
+  response: |-
+    7E8102962E002FC0400
+    7E82100000035341B01
+    7E822E7000CC4010000
+    7E82300006A0000DB00
+    7E824D800DE00CE00DB
+    7E82500D00000000000
+- expected_values:
     KIA_INJ_DUR_1: 0.23757
     KIA_INJ_DUR_2: 0.24494
     KIA_INJ_DUR_3: 0.2433
