--- a/tests/test_cases/2021/commands/7E0.0104.yaml
+++ b/tests/test_cases/2021/commands/7E0.0104.yaml
@@ -7,6 +7,9 @@ test_cases:
     LOAD_PCT: 17.64706
   response: 7E80341042D
 - expected_values:
+    LOAD_PCT: 18.43137
+  response: 7E80341042F
+- expected_values:
     LOAD_PCT: 20.39216
   response: '7E803410434'
 - expected_values:
