--- a/tests/test_cases/2021/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22E001.yaml
@@ -133,6 +133,18 @@ test_cases:
     7E8253602535B640000
     7E826002A240BAAAAAA
 - expected_values:
+    KIA_EIT: 14.25
+    KIA_EOT: 51.75249
+    KIA_IAT: 14.25156
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D1D138900B46
+    7E82200000000B70019
+    7E8232F00250F0000B3
+    7E8240095FD03440000
+    7E82531025385640000
+    7E82600221608AAAAAA
+- expected_values:
     KIA_EIT: 6.75
     KIA_EOT: 15.00158
     KIA_IAT: 6.75137
