--- a/tests/test_cases/2021/commands/7E0.0134.yaml
+++ b/tests/test_cases/2021/commands/7E0.0134.yaml
@@ -1,21 +1,25 @@
 command_id: 7E0.0134
 test_cases:
 - expected_values:
-    LAMBDA11_CURRENT: 0.89008
-    O2S11_CURRENT: -0.44922
-  response: 7E806413471EE7F8D
+    LAMBDA11_CURRENT: 0.88422
+    O2S11_CURRENT: -0.47656
+  response: 7E8064134712E7F86
 - expected_values:
     LAMBDA11_CURRENT: 0.90668
     O2S11_CURRENT: -0.375
   response: 7E8064134740E7FA0
 - expected_values:
-    LAMBDA11_CURRENT: 1.00439
+    LAMBDA11_CURRENT: 1.00342
     O2S11_CURRENT: -0.00391
-  response: 7E806413480907FFF
+  response: 7E806413480707FFF
 - expected_values:
     LAMBDA11_CURRENT: 1.00537
     O2S11_CURRENT: 0
   response: 7E806413480B08000
+- expected_values:
+    LAMBDA11_CURRENT: 1.99
+    O2S11_CURRENT: 1.61328
+  response: 7E8064134FFFF819D
 - expected_values:
     LAMBDA11_CURRENT: 1.99
     O2S11_CURRENT: 2.23438
